xfsprogs-2.9.3 (23 July 2007)
	- Make xfs_repair support > 512 byte sector sizes.
	- Fixed include Makefile for new common header (xfs_metadump.h).
	- Fixed xfs_quota state command segfaulting with no mounted
	  XFS filesystems.
	- Fixed xfs_quota printing out unusual message with "path n" command
	  with no mounted XFS filesystems.
	- Fixed "quota -n" command with project IDs.
	- Improved "free" output when project quotas are defined, but
	  haven't been enable on the filesystem.
	  Thanks to Utako Kusaka <utako@tnes.nec.co.jp> for the above four
	  fixes.

xfsprogs-2.9.2 (18 July 2007)
	- Next major round of xfs_repair performance improvements:
		- Cache disk nlink values in Phase 3 for Phase 7.
		- Do multithreaded prefetch/processing based on AG stride
		  option (ie. for concats).
		- Don't trash lost+found at the start of Phase 4, eliminates
		  repeated "moving disconnected inode to lost+found" with
		  successive xfs_repair runs.
		- Do multi-threaded sequential metadata prefetch.
		  Method based on Agami patches posted for 2.7.18 xfsprogs.
		- Improve the libxfs cache with priority tagging to keep
		  blocks around that have unfavourable I/O characteristics.
	- Make mkfs.xfs -f zero the old secondary superblocks before writing
	  the new superblocks.
	- Fix up xfs_info and xfs_quota's -c handling with global commands.
	- Improve xfs_bmap -vp output to always show the FLAGS column.
	- Update man pages.

xfsprogs-2.9.1 (28 June 2007)
	- Added filestreams support to xfs_io.
	- Fix up libattr Makefile to append to LTLDFLAGS. Thanks to
	  Arfrever Frehtes Taifersar Arahesis <Arfrever.FTA@GMail.Com> for this.
	- Fix up build not to ignore LDFLAGS generated by configure.
	  Thanks to SpanKY <vapier@gentoo.org> for this.

xfsprogs-2.9.0 (5 June 2007)
	- Added new tools: xfs_metadump and xfs_mdrestore.
	- Fix up the HAVE___U32 fix from 2.8.20
	  Thanks to Eric Sandeen for pointing this out.

xfsprogs-2.8.21 (28 May 2007)